fix attempt modal overflow by changing landing page width to 100vw

--- a/src/components/LandingPage/LandingPage.module.scss
+++ b/src/components/LandingPage/LandingPage.module.scss
@@ -2,6 +2,6 @@
 
 .LandingPage {
     height: 100%;
-    width: 100%;
+    width: 100vw;
     background-color: white;
 }
